--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,9 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.13.2",
     "aiosqlite>=0.21.0",
+    "asyncpg>=0.31.0",
+    "bcrypt==4.2.0",
     "fastapi>=0.121.3",
+    "greenlet>=3.2.4",
+    "passlib>=1.7.4",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
+    "python-jose>=3.5.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
