--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.13.2",
     "aiosqlite>=0.21.0",
+    "alembic>=1.17.2",
     "asyncpg>=0.31.0",
     "bcrypt==4.2.0",
     "fastapi>=0.121.3",
