--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -6,7 +6,7 @@ AUTH_SECRET_KEY=secret_key
 AUTH_ALGORITHM=your_algoritm
 AUTH_TOKEN_LIFETIME_IN_MIN=30
 
-FRONTEND_URL=http://127.0.0.1:8001
+FRONTEND_URL=http://localhost:5173/
 NCT_AUTH_URL=http://127.0.0.1:8000
 
 DISPATCHER_URL=http://127.0.0.1:8000
