--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,9 +12,11 @@ dependencies = [
     "bcrypt==4.2.0",
     "fastapi>=0.121.3",
     "greenlet>=3.2.4",
+    "httpx>=0.28.1",
     "passlib>=1.7.4",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
+    "pytest>=9.0.2",
     "python-jose>=3.5.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
