--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   db:
     image: postgres:17
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: foodapp
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
