--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,12 +11,14 @@ dependencies = [
     "asyncpg>=0.31.0",
     "bcrypt==4.2.0",
     "fastapi>=0.121.3",
+    "freezegun>=1.5.5",
     "greenlet>=3.2.4",
     "httpx>=0.28.1",
     "passlib>=1.7.4",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "python-jose>=3.5.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
