feat: new refresh tokens start

--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -5,6 +5,7 @@ DB_PATH=postgresql+asyncpg://username:password@localhost:port/db_name
 AUTH_SECRET_KEY=secret_key
 AUTH_ALGORITHM=your_algoritm
 AUTH_TOKEN_LIFETIME_IN_MIN=30
+AUTH_REFRESH_LIFETIME_IN_DAYS=5
 
 FRONTEND_URL=http://localhost:5173/
 NCT_AUTH_URL=http://127.0.0.1:8000
