--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,28 @@
 services:
   db:
-    image: postgres:17
+    image: postgres:18.1-alpine3.23
+    container_name: db
     environment:
-      POSTGRES_DB: foodapp
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - "6432:5432"
     volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    depends_on:
+      - db
+    image: redis:8.6-rc1-alpine3.23
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --maxmemory 100mb
+    restart: always
 
 volumes:
   postgres_data:
+  redis_data:
