feat: my auth service

--- a/auth_service/.env.prod
+++ b/auth_service/.env.prod
@@ -4,11 +4,9 @@ HOST=127.0.0.1
 PORT=8001
 ACCESS_CODE=123test
 
-DB_URL=postgresql+asyncpg://postgres:postgres@localhost:6432/whitelist
+DB_URL=postgresql+asyncpg://postgres:postgres@localhost:6432/auth
 
 REDIS_URL=redis://localhost
 REDIS_EXPIRE=3600 # 1 час
 REDIS_POOL_SIZE=10
-REDIS_PREFIX=ws
-
-DAYS_IN_BAN=3
+REDIS_PREFIX=au
