--- a/auth_service/pyproject.toml
+++ b/auth_service/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.14"
 dependencies = [
     "apscheduler>=3.11.2",
     "asyncpg>=0.31.0",
+    "bcrypt==4.2.0",
     "fastapi>=0.128.0",
+    "passlib>=1.7.4",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "redis>=7.1.0",
