--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,18 @@ services:
     ports:
       - "8002:8000"
 
+  auth_service:
+    container_name: auth_service
+    depends_on:
+      - blocklist
+    volumes:
+      - ./core:/app/core
+    build:
+      context: ./auth_service
+      dockerfile: Dockerfile
+    ports:
+      - "8003:8000"
+
 volumes:
   postgres_data:
   redis_data:
