feat: start backend rework

--- a/auth_service/.env.prod
+++ b/auth_service/.env.prod
@@ -1,12 +1,17 @@
 DEBUG=True
 
-HOST=127.0.0.1
-PORT=8001
-ACCESS_CODE=123test
+HOST=0.0.0.0
+PORT=8000
+ACCESS_CODE=auth_access_code # Код доступа для этого приложения
 
-DB_URL=postgresql+asyncpg://postgres:postgres@localhost:6432/auth
+DB_URL=postgresql+asyncpg://postgres:postgres@db:5432/auth
 
-REDIS_URL=redis://localhost
+REDIS_URL=redis://redis:6379
 REDIS_EXPIRE=3600 # 1 час
 REDIS_POOL_SIZE=10
 REDIS_PREFIX=au
+
+AUTH_SECRET_KEY=auth_hash_very_sicret
+AUTH_ALGORITHM=HS256
+AUTH_ACCESS_EXPIRE=900 # 15 минут
+AUTH_REFRESH_EXPIRE_DAYS=7
