--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "python-jose>=3.5.0",
+    "redis>=7.1.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
