feat: corrections in docker compose

--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -1,15 +1,27 @@
 DEBUG=True
+HOST=0.0.0.0
 PORT=8000
-DB_PATH=postgresql+asyncpg://username:password@localhost:port/db_name
+DB_PATH=postgresql+asyncpg://postgres:postgres@db:5432/foodapp
 
-AUTH_SECRET_KEY=secret_key
-AUTH_ALGORITHM=your_algoritm
-AUTH_TOKEN_LIFETIME_IN_MIN=30
-AUTH_REFRESH_LIFETIME_IN_DAYS=5
+AUTH_URL=http://auth_service:8000
+AUTH_SECRET_KEY=auth_hash_very_sicret
+AUTH_ALGORITHM=HS256
+AUTH_ACCESS_EXPIRE=900
+AUTH_REFRESH_EXPIRE_DAYS=7
+AUTH_REDIS_PREFIX=au
+AUTH_ACCESS_CODE=auth_access_code
 
-FRONTEND_URL=http://localhost:5173/
-NCT_AUTH_URL=http://127.0.0.1:8000
+REDIS_URL=redis://redis:6379
+REDIS_EXPIRE=3600 # 1 час
+REDIS_POOL_SIZE=10
+REDIS_PREFIX=ap
 
-DISPATCHER_URL=http://127.0.0.1:8000
-DISPATCHER_CODE=12345
-DISPATCHER_APP=12345
+BLOCKER_URL=http://blocklist:8000
+BLOCKER_REDIS_PREFIX=ws
+BLOCKER_ACCESS_CODE=blocker_service_code
+
+FRONTEND_URL=http://127.0.0.1:8000,http://127.0.0.1:8000/,http://localhost:8000,http://localhost:8000/
+
+DISPATCHER_URL=url.path.to.dispatcher.api
+DISPATCHER_APP=FoodApp
+DISPATCHER_CODE=123test
