--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "sqlalchemy>=2.0.46",
     "pydantic",
     "fastapi",
+    "uvicorn>=0.40.0",
+    "httpx>=0.28.1",
+    "aiohttp>=3.13.3",
 ]
 [project.optional-dependencies]
 test = [
