--- a/blocker_service/.env.prod
+++ b/blocker_service/.env.prod
@@ -6,7 +6,7 @@ ACCESS_CODE=blocker_service_code
 
 DB_URL=postgresql+asyncpg://postgres:postgres@db:5432/whitelist
 
-REDIS_URL=redis://localhost
+REDIS_URL=redis://redis:6379
 REDIS_EXPIRE=3600 # 1 час
 REDIS_POOL_SIZE=10
 REDIS_PREFIX=ws
