--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "uvicorn>=0.40.0",
     "httpx>=0.28.1",
     "aiohttp>=3.13.3",
+    "psutil>=7.2.2",
 ]
 [project.optional-dependencies]
 test = [
