--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY app .
+COPY data data
 COPY .env.prod .env
 
 CMD sh -c "pip install -e /app/core && python ."
