--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "greenlet>=3.2.4",
     "httpx>=0.28.1",
     "passlib>=1.7.4",
+    "psutil>=7.2.2",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
